<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.songbai.wrapres.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:backFeature="true"
        app:backIcon="@drawable/ic_tb_back_black"
        app:titleText="@string/modify_user_info"
        app:titleTextColor="@color/text"/>

    <RelativeLayout
        android:id="@+id/headImageLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_white"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/modify_head_pic"
            android:textColor="@color/text"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/userHeadImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/helpArrow"/>

        <ImageView
            android:id="@+id/helpArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_arrow_right_tint"/>
    </RelativeLayout>

    <com.songbai.wrapres.IconTextRow
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:rightIcon="@drawable/ic_arrow_right_tint"
        app:rowText="@string/nickname"
        app:rowTextColor="@color/text"
        app:subTextColor="@color/unluckyText"
        app:subTextSize="15sp"/>

    <com.songbai.wrapres.IconTextRow
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_arrow_right_tint"
        app:rowText="@string/sex"
        app:rowTextColor="@color/text"
        app:splitLineColor="@color/split"
        app:subTextColor="@color/unluckyText"/>

    <com.songbai.wrapres.IconTextRow
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:rightIcon="@drawable/ic_arrow_right_tint"
        app:rowText="@string/age"
        app:rowTextColor="@color/text"
        app:splitLineColor="@color/split"
        app:subTextColor="@color/unluckyText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/text"/>

        <com.songbai.wrapres.autofit.AutofitTextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:textColor="@color/unluckyText"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right_tint"
            tools:ignore="ContentDescription"/>
    </LinearLayout>
</LinearLayout>
