<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.songbai.wrapres.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/setting"/>

    <LinearLayout
        android:id="@+id/receiveNotification"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/receive_new_notification"
            android:textColor="@color/text"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_switch"/>
    </LinearLayout>

    <com.songbai.wrapres.IconTextRow
        android:id="@+id/personalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:layout_constraintTop_toBottomOf="@+id/receiveNotification"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/personal_data"
        app:splitLineColor="@color/background"/>

    <com.songbai.wrapres.IconTextRow
        android:id="@+id/aboutBcnews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/personalData"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText=""/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/aboutBcnews"/>
</android.support.constraint.ConstraintLayout>
