<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="15dp"
        android:paddingRight="15dp"
        android:src="@drawable/ic_black_close"/>

    <LinearLayout
        android:id="@+id/contentArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/weChatArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/weChatAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_share_wechat"/>

            <TextView
                android:id="@+id/weChatName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="15sp"
                tools:text="蓝色"/>

        </LinearLayout>

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/auth_code_login"
            android:textColor="@color/text"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="+86"
                android:textColor="@color/unluckyText"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/phoneNumber"
                style="@style/SignEditText.PhoneNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:hint="@string/phone_number"/>

            <ImageView
                android:id="@+id/phoneNumberClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_data_clear"
                android:visibility="invisible"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="3dp"
            android:background="@color/split"/>

        <LinearLayout
            android:id="@+id/authCodeArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/authCode"
                style="@style/SignEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/auth_code"
                android:inputType="number"
                android:maxLength="10"/>

            <TextView
                android:id="@+id/getAuthCode"
                android:layout_width="90dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_white_one_hundred_rounded"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/get_auth_code"
                android:textColor="@color/primary_or_unlucky_text_color"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/split"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/btn_yellow_small_rounded"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/fast_login"
                android:textColor="@android:color/white"/>

            <ImageView
                android:id="@+id/loading"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="90dp"
                android:src="@drawable/ic_loading"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/weChatLogin"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_above="@+id/agreeWrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_wechat_login"
        android:drawableLeft="@drawable/ic_login_wechat"
        android:gravity="center"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:text="@string/wechat_login"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:visibility="gone"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/agreeWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_agree"
            android:textColor="@color/unluckyText"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bcnews_agreement"
            android:textColor="#476192"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>
